Fixing registering prefix field and tests for queries type and searching, indexing